--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "api_and_front_challenge",
   "version": "1.0.0",
   "scripts": {
-    "build": "npx cypress run"
+    "build": "npx cypress run -b chrome"
   },
   "dependencies": {
     "cypress": "^13.8.1"
