- Added FE TCs 2 (alerts) and 3 (elements) - Added allure report plugin

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "cypress": "^13.8.1"
   },
   "devDependencies": {
-    "@faker-js/faker": "^8.4.1"
+    "@faker-js/faker": "^8.4.1",
+    "@shelex/cypress-allure-plugin": "^2.40.2",
+    "allure-commandline": "^2.29.0"
   }
 }
